--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.8",
     "next": "14.2.13",
     "next-auth": "^5.0.0-beta.21",
     "react": "^18",
