--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next-auth": "^5.0.0-beta.21",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "twitter-api-v2": "^1.17.2"
   },
   "devDependencies": {
     "@types/node": "^20",
