--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "twitter-api-sdk": "^1.2.1",
     "twitter-api-v2": "^1.17.2"
   },
   "devDependencies": {
