--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.8",
     "axios": "^1.7.7",
+    "framer-motion": "^11.9.0",
     "next": "14.2.13",
     "next-auth": "^5.0.0-beta.21",
     "react": "^18",
